INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/ryujin
  ${CMAKE_SOURCE_DIR}/grendel
  )

SET(DIM 2 CACHE STRING "The dimension")

ADD_EXECUTABLE(ryujin
  ryujin.cc
  timeloop.cc
  )

DEAL_II_SETUP_TARGET(ryujin)
TARGET_LINK_LIBRARIES(ryujin grendel)
TARGET_LINK_LIBRARIES(ryujin stdc++fs)

SET_PROPERTY(TARGET ryujin
  PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/run
  )

SET_PROPERTY(TARGET ryujin APPEND PROPERTY COMPILE_DEFINITIONS
  DIM=${DIM}
  CMAKE_BUILD_TYPE="${CMAKE_BUILD_TYPE}"
  RYUJIN_VERSION="${RYUJIN_VERSION}"
  RYUJIN_GIT_REVISION="${GIT_REVISION}"
  RYUJIN_GIT_SHORTREV="${GIT_SHORTREV}"
  )
